--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
         android:theme="@style/Theme.Diary"
         tools:targetApi="31">
         <activity
-            android:name=".CalandarActivity"
-            android:exported="false" />
-        <activity
-            android:name=".View.Activity.MainActivity"
+            android:name=".View.Activity.CalandarActivity"
             android:exported="true"
             android:theme="@style/Theme.Diary.NoActionBar"
             tools:node="merge">
@@ -25,6 +22,17 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".View.Activity.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Diary.NoActionBar"
+            tools:node="merge">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
 
         <meta-data
