--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,22 @@ android {
 }
 
 dependencies {
+    def emojiViewVersion = "1.5.2"
+    def emojiViewProvider = "AppleProvider"
 
+    //Emoji Library
+    implementation "io.github.aghajari:AXEmojiView:$emojiViewVersion"
+    implementation "io.github.aghajari:AXEmojiView-$emojiViewProvider:$emojiViewVersion"
+    implementation "io.github.aghajari:AXEmojiView-Microsoft3DProvider:$emojiViewVersion"
+    implementation "io.github.aghajari:AXEmojiView-AppleProvider:$emojiViewVersion"
+    implementation "io.github.aghajari:AXEmojiView-iOSProvider:$emojiViewVersion"
+    implementation "io.github.aghajari:AXEmojiView-GoogleProvider:$emojiViewVersion"
+    implementation "io.github.aghajari:AXEmojiView-SamsungProvider:$emojiViewVersion"
+    implementation "io.github.aghajari:AXEmojiView-FacebookProvider:$emojiViewVersion"
+    implementation "io.github.aghajari:AXEmojiView-TwitterProvider:$emojiViewVersion"
+    implementation "io.github.aghajari:AXEmojiView-EmojidexProvider:$emojiViewVersion"
+
+    //Base Library
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
