--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
 dependencies {
     def emojiViewVersion = "1.5.2"
     def emojiViewProvider = "AppleProvider"
+    def lottieVersion = "5.2.0"
+
+    //Lottie
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
     //Text Editor
     implementation 'jp.wasabeef:richeditor-android:2.0.0'
