--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'jp.wasabeef:richeditor-android:2.0.0'
 
     //Emoji Library
+    implementation 'com.google.code.gson:gson:2.10'
     implementation "io.github.aghajari:AXEmojiView:$emojiViewVersion"
     implementation "io.github.aghajari:AXEmojiView-$emojiViewProvider:$emojiViewVersion"
     implementation "io.github.aghajari:AXEmojiView-Microsoft3DProvider:$emojiViewVersion"
