--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,18 +13,20 @@
         android:theme="@style/Theme.Diary"
         tools:targetApi="31">
         <activity
+            android:name=".View.Activity.MediaActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Diary.NoActionBar"
+            tools:node="merge"></activity>
+        <activity
             android:name=".View.Activity.DiaryActivity"
             android:exported="true"
             android:theme="@style/Theme.Diary.NoActionBar"
-            tools:node="merge">
-        </activity>
+            tools:node="merge"></activity>
         <activity
             android:name=".View.Activity.CalandarActivity"
             android:exported="true"
             android:theme="@style/Theme.Diary.NoActionBar"
-            tools:node="merge">
-
-        </activity>
+            tools:node="merge"></activity>
         <activity
             android:name=".View.Activity.MainActivity"
             android:exported="true"
