--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,16 +46,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10'
     implementation "io.github.aghajari:AXEmojiView:$emojiViewVersion"
     implementation "io.github.aghajari:AXEmojiView-$emojiViewProvider:$emojiViewVersion"
-    implementation "io.github.aghajari:AXEmojiView-Microsoft3DProvider:$emojiViewVersion"
-    implementation "io.github.aghajari:AXEmojiView-AppleProvider:$emojiViewVersion"
-    implementation "io.github.aghajari:AXEmojiView-iOSProvider:$emojiViewVersion"
-    implementation "io.github.aghajari:AXEmojiView-GoogleProvider:$emojiViewVersion"
-    implementation "io.github.aghajari:AXEmojiView-SamsungProvider:$emojiViewVersion"
     implementation "io.github.aghajari:AXEmojiView-FacebookProvider:$emojiViewVersion"
-    implementation "io.github.aghajari:AXEmojiView-TwitterProvider:$emojiViewVersion"
-    implementation "io.github.aghajari:AXEmojiView-EmojidexProvider:$emojiViewVersion"
 
     //Base Library
+    implementation  'io.ak1:drawbox:1.0.2'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation 'androidx.appcompat:appcompat:1.5.1'
