--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,43 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        android:minSdkVersion="30" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Diary"
         tools:targetApi="31">
         <activity
+            android:name=".View.Activity.CanvasActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Diary.NoActionBar"
+            tools:node="merge">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity
             android:name=".View.Activity.MediaActivity"
             android:exported="true"
             android:theme="@style/Theme.Diary.NoActionBar"
-            tools:node="merge"></activity>
+            tools:node="merge" />
         <activity
             android:name=".View.Activity.DiaryActivity"
             android:exported="true"
             android:theme="@style/Theme.Diary.NoActionBar"
-            tools:node="merge"></activity>
+            tools:node="merge">
+
+        </activity>
         <activity
             android:name=".View.Activity.CalandarActivity"
             android:exported="true"
             android:theme="@style/Theme.Diary.NoActionBar"
-            tools:node="merge"></activity>
+            tools:node="merge" />
         <activity
             android:name=".View.Activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Diary.NoActionBar"
-            tools:node="merge">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            tools:node="merge"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
