--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     def emojiViewProvider = "AppleProvider"
     def lottieVersion = "5.2.0"
 
+    //Jsoup
+    implementation 'org.jsoup:jsoup:1.15.3'
+
     //Lottie
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
