--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     def emojiViewVersion = "1.5.2"
     def emojiViewProvider = "AppleProvider"
     def lottieVersion = "5.2.0"
+    //Lock Screen
+    implementation 'com.github.p32929:AndroidAppLockscreen:1.2'
 
     //Calendar
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
@@ -54,6 +56,9 @@ dependencies {
     implementation "io.github.aghajari:AXEmojiView:$emojiViewVersion"
     implementation "io.github.aghajari:AXEmojiView-$emojiViewProvider:$emojiViewVersion"
     implementation "io.github.aghajari:AXEmojiView-FacebookProvider:$emojiViewVersion"
+
+    //Image Picker
+    implementation 'com.asksira.android:bsimagepicker:1.3.2'
 
     //Base Library
     implementation  'io.ak1:drawbox:1.0.2'
