--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,12 @@ dependencies {
     def emojiViewVersion = "1.5.2"
     def lottieVersion = "5.2.0"
 
+
+
+    //Export and Import
+    implementation 'com.github.prabhat1707:DbExporterHelper:v1.0'
+    implementation 'me.rosuh:AndroidFilePicker:0.8.2'
+
     //Progess bar
     implementation 'com.github.iammert:TileProgressView:0.1'
 
@@ -67,6 +73,7 @@ dependencies {
 
     //Base Library
     implementation  'io.ak1:drawbox:1.0.2'
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
