--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32"
-        tools:replace="android:maxSdkVersion" />
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission
-        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
-        android:minSdkVersion="30" />
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 
     <application
         android:allowBackup="true"
@@ -23,11 +23,15 @@
         android:theme="@style/Theme.Diary"
         tools:targetApi="31">
         <activity
+            android:name=".View.Activity.BackupRestoreActivity"
+            android:exported="true"
+            android:label="@string/title_activity_lock_app"
+            android:theme="@style/Theme.Diary.NoActionBar"></activity>
+        <activity
             android:name=".View.Activity.ExportImportActivity"
             android:exported="true"
             android:label="@string/title_activity_lock_app"
-            android:theme="@style/Theme.Diary.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.Diary.NoActionBar"></activity>
         <activity
             android:name=".View.Activity.SecurityPasswordActivity"
             android:exported="false"
@@ -46,12 +50,13 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.project.diary.fileprovider"
+            android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
+                android:resource="@xml/file_paths"
+                tools:replace="android:resource" />
         </provider>
         <provider
             android:name="androidx.core.content.FileProvider"
