--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         android:theme="@style/Theme.Diary"
         tools:targetApi="31">
         <activity
+            android:name=".View.Activity.TemplateActivity"
+            android:exported="true"
+            android:label="@string/title_activity_lock_app"
+            android:theme="@style/Theme.Diary.NoActionBar" />
+        <activity
             android:name=".View.Activity.ThemeActivity"
             android:exported="true"
             android:label="@string/title_activity_lock_app"
