--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,6 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Diary"
         tools:targetApi="31">
+        <receiver android:name=".Control.Notification.NotificationPublisher" />
+        <activity
+            android:name=".View.Activity.SettingActivity"
+            android:exported="true"
+            android:label="@string/title_activity_lock_app"
+            android:theme="@style/Theme.Diary.NoActionBar" />
         <activity
             android:name=".View.Activity.TemplateActivity"
             android:exported="true"
@@ -35,11 +42,6 @@
             android:theme="@style/Theme.Diary.NoActionBar" />
         <activity
             android:name=".View.Activity.BackupRestoreActivity"
-            android:exported="true"
-            android:label="@string/title_activity_lock_app"
-            android:theme="@style/Theme.Diary.NoActionBar" />
-        <activity
-            android:name=".View.Activity.ExportImportActivity"
             android:exported="true"
             android:label="@string/title_activity_lock_app"
             android:theme="@style/Theme.Diary.NoActionBar" />
