--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.Diary"
         tools:targetApi="31">
         <activity
-            android:name=".ViewDiaryActivity"
+            android:name=".View.Activity.ViewDiaryActivity"
             android:exported="true"
             android:label="@string/title_activity_lock_app"
             android:theme="@style/Theme.Diary.NoActionBar" />
