-Đổi vị trí nút Xóa và Edit trong ViewDiaryActivity -Fix bug xuống hàng khi thêm ảnh -Ẩn tính năng Câu Hỏi Bảo Mật -Ẩn tính năng reset pas

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     def lottieVersion = "5.2.0"
 
 
-
+    implementation 'com.github.TrikayCoder:KayThread:1.0.2'
     //Tabs
     implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:2.0.0@aar'
